--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weighbridge-operator",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://skbusinesslogics.com/awamikanta/",
+  "homepage": "https://skbusinesslogics.com/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
     "@testing-library/dom": "^10.4.1",
